fix: jumpy mobile scroll

--- a/src/index.css
+++ b/src/index.css
@@ -125,3 +125,7 @@
     html { scroll-behavior: auto; }
   }
 }
+
+html {
+  overflow-anchor: none;
+}
